kubernetes/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: opendata
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #certmanager.k8s.io/issuer: "letsencrypt-staging"
    #certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: opendata.com
    http:
      paths:
      - path: /v1/graphql
        backend:
          serviceName: graphql
          servicePort: 3001
      - path: /v2/graphql
        backend:
          serviceName: graphql
          servicePort: 3001
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
